--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <li><a href="shopping.html" >Purchase Packages</a></li>
         <li><a href="schedule.html">Schedule appointment</a></li>
         <li><a href="index.html">My portfolio</a></li>
-        <li><a href="about.html" class="alignright,active">About me</a></li>
+        <li><a href="about.html" class="alignright,active">Contact me</a></li>
 
       </ul>
 
