--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li><a href="shopping.html" >Purchase Packages</a></li>
           <li><a href="schedule.html">Schedule appointment</a></li>
           <li><a href="index.html"class="active">My portfolio</a></li>
-          <li><a href="about.html" class="alignright">About me</a></li>
+          <li><a href="about.html" class="alignright">Contact me</a></li>
 
         </ul>
 
