--- a/schedule.html
+++ b/schedule.html
@@ -14,7 +14,7 @@
     <li><a href="shopping.html" >Purchase Packages</a></li>
     <li><a href="schedule.html"class="active">Schedule appointment</a></li>
     <li><a href="index.html">My portfolio</a></li>
-    <li><a href="about.html" class="alignright">About me</a></li>
+    <li><a href="about.html" class="alignright">Contact me</a></li>
 
   </ul>
 
