--- a/shopping.html
+++ b/shopping.html
@@ -14,7 +14,7 @@
     <li><a href="shopping.html" class="active">Purchase Packages</a></li>
     <li><a href="schedule.html">Schedule appointment</a></li>
     <li><a href="index.html">My portfolio</a></li>
-    <li><a href="about.html" class="alignright">About me</a></li>
+    <li><a href="about.html" class="alignright">Contact me</a></li>
 
   </ul>
 
