--- a/introduction.html
+++ b/introduction.html
@@ -22,7 +22,7 @@
 
     </div>
     <div class="backgroundinfo">
-      I'm a photographer from Baltimore Maryland, with a passion for capturing the highlights of our world! <br> I've lived in Baltimore, Maryland, my entire life and have a bachelor's degree in fine arts. <br> I'm 22 years old and enjoy running, drawing, and listening to music in my free time.
+      I'm a photographer from Baltimore Maryland, with a passion for capturing the highlights of our world! <br>I have a bachelor's degree in fine arts from the University of Maryland. <br> I'm 22 years old and enjoy running, drawing, and listening to music in my free time.
       <br><img src="https://cdn.pixabay.com/photo/2014/11/09/23/32/boy-524512_960_720.jpg">
     </div>
   </body>
