--- a/shopping.html
+++ b/shopping.html
@@ -6,11 +6,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="backgroundcolor">
-<h2>Photographer</h2>
-
 <nav>
   <ul>
-    <li><a href="introduction.html">Portfolio</a></li>
+    <li><a href="introduction.html">Introduction</a></li>
     <li><a href="shopping.html" class="active">Purchase Packages</a></li>
     <li><a href="schedule.html">Schedule appointment</a></li>
     <li><a href="index.html">My portfolio</a></li>
