--- a/shopping.html
+++ b/shopping.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Julian Clark</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="backgroundcolor">
+    <img src="https://www.freelogodesign.org/file/app/client/thumb/c6f877b9-0c39-483b-9ae1-f91668873a29_200x200.png?1608597723441" alt="">
 <nav>
   <ul>
     <li><a href="introduction.html">Introduction</a></li>
@@ -17,6 +18,13 @@
   </ul>
 
 </nav>
-
+<div class="intro">
+Click <br><a href="mailto:julianclarkphotographer@gmail.com">here to buy pictures!</a>
+</div>
+<div class="backgroundinfo">
+  Buying Photos: <br> $15 for 1 photo <br> $25 for 2 photos <br> $35 for 3 photos. <br><br>
+  Buying Photoshoots:<br> Single day Photoshoots: $50 <br> Double Day Photoshoots: $125+Venue <br><br>
+  Bundles: <br> 1 Photo + 1 Day Photoshoot:$60 <br> 2 Photos + 1 Day Photoshoot: $65
+</div>
   </body>
 </html>
