--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Julian Clark</title>
 
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -22,9 +22,9 @@
         Here is a preview of my work!
       </div>
       <br>
-      <img src="https://cdn.pixabay.com/photo/2015/01/05/09/18/aurora-589049_960_720.jpg">
-      <img src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_960_720.jpg">
-<img src="https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171_960_720.jpg" alt="">
-<img src="https://cdn.pixabay.com/photo/2016/08/11/23/48/italy-1587287_960_720.jpg" alt="">
+      <img class="centercenter"src="https://cdn.pixabay.com/photo/2015/01/05/09/18/aurora-589049_960_720.jpg">
+      <img class="centercenter"src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_960_720.jpg">
+<img class="centercenter"src="https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171_960_720.jpg" alt="">
+<img class="centercenter"src="https://cdn.pixabay.com/photo/2016/08/11/23/48/italy-1587287_960_720.jpg" alt="">
   </body>
 </html>
