--- a/shopping.html
+++ b/shopping.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="backgroundcolor">
-    <img src="https://www.freelogodesign.org/file/app/client/thumb/c6f877b9-0c39-483b-9ae1-f91668873a29_200x200.png?1608597723441" alt="">
+    <img class="toplogo" src="https://www.freelogodesign.org/file/app/client/thumb/c6f877b9-0c39-483b-9ae1-f91668873a29_200x200.png?1608597723441" alt="">
 <nav>
   <ul>
     <li><a href="introduction.html">Introduction</a></li>
@@ -19,7 +19,8 @@
 
 </nav>
 <div class="intro">
-Click <br><a href="mailto:julianclarkphotographer@gmail.com">here to buy pictures!</a>
+<br><a href="mailto:julianclarkphotographer@gmail.com">Click here to buy pictures!</a>
+<br>
 </div>
 <div class="backgroundinfo">
   Buying Photos: <br> $15 for 1 photo <br> $25 for 2 photos <br> $35 for 3 photos. <br><br>
