--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+        <img class="toplogo" src="https://www.freelogodesign.org/file/app/client/thumb/c6f877b9-0c39-483b-9ae1-f91668873a29_200x200.png?1608597723441" alt="">
       <nav>
         <ul>
           <li><a href="introduction.html">Portfolio</a></li>
