--- a/accomplishments.html
+++ b/accomplishments.html
@@ -10,23 +10,27 @@
 <nav>
   <ul>
     <li><a href="introduction.html">Introduction</a></li>
-    <li><a href="shopping.html" class="active">Purchase Packages</a></li>
+    <li><a href="shopping.html" >Purchase Packages</a></li>
     <li><a href="schedule.html">Schedule appointment</a></li>
     <li><a href="index.html">My portfolio</a></li>
-                <li><a href="accomplishments.html">Accomplishments</a></li>
+    <li><a href="accomplishments.html"class="active">Accomplishments</a></li>
     <li><a href="about.html" class="alignright">Contact me</a></li>
 
   </ul>
 
 </nav>
-<div class="intro">
-<br><a href="mailto:julianclarkphotographer@gmail.com">Click here to buy pictures!</a>
-<br>
-</div>
+
 <div class="backgroundinfo">
-  Buying Photos: <br> $15 for 1 photo <br> $25 for 2 photos <br> $35 for 3 photos. <br><br>
-  Buying Photoshoots:<br> Single day Photoshoots: $50 <br> Double Day Photoshoots: $125+Venue <br><br>
-  Bundles: <br> 1 Photo + 1 Day Photoshoot:$60 <br> 2 Photos + 1 Day Photoshoot: $65
+  There are many photographers out there, but these are the things that set me apart!
+  <br>
+  <br>
+-Booked over 120 times!
+<br>
+-Worked for National Geographic in a documentary about Yellow Stone
+<br>
+-Bachelors degree in Fine Arts from the University of Maryland
+<br>
+-Honorable mention in the International Photography Awards contest 2019
 </div>
   </body>
 </html>
