--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="shopping.html" >Purchase Packages</a></li>
           <li><a href="schedule.html">Schedule appointment</a></li>
           <li><a href="index.html"class="active">My portfolio</a></li>
+                      <li><a href="accomplishments.html">Accomplishments</a></li>
           <li><a href="about.html" class="alignright">Contact me</a></li>
 
         </ul>
@@ -27,5 +28,6 @@
       <img class="centercenter"src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_960_720.jpg">
 <img class="centercenter"src="https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171_960_720.jpg" alt="">
 <img class="centercenter"src="https://cdn.pixabay.com/photo/2016/08/11/23/48/italy-1587287_960_720.jpg" alt="">
+<a href="citations.html" style="">Citations</a>
   </body>
 </html>
