--- a/introduction.html
+++ b/introduction.html
@@ -13,13 +13,14 @@
         <li><a href="shopping.html">Purchase Packages</a></li>
         <li><a href="schedule.html">Schedule appointment</a></li>
         <li><a href="index.html">My portfolio</a></li>
+                    <li><a href="accomplishments.html">Accomplishments</a></li>
         <li><a href="about.html" class="alignright">Contact me</a></li>
 
       </ul>
 
     </nav>
     <div class="intro">
-      Hello! I'm Julian Clarke!
+      Hello! I'm Julian Clark!
 
     </div>
     <div class="backgroundinfo">
